SERVER-16058 change misleading message about cursor cleanup in parallel.cpp